style: allow nav items to wrap while preventing text break

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -60,8 +60,10 @@ header h1 {
 
 nav {
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
   margin: 8px auto 0px;
+  white-space: nowrap;
 }
 
 
